--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -34,9 +34,8 @@
       </div>
       <div class="form-check-inline radio-image">
         <label class="form-check-label d-flex flex-column-reverse">
-          <input attr.aria-label="MQTT Broker" type="radio" name="type" value="MQTT" required
-                 [checked]="true"
-                 class="form-check-input" [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
+          <input attr.aria-label="MQTT" type="radio"  value="ogfuerighMQTTefwefwe" required
+                 class="form-check-input" [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null" >
           <div class="image-container">
             <img src="assets/images/logo_mqtt.png" alt="MQTT">
           </div>
