Added helper text about autogenerated informations for mqtt

--- a/src/app/applications/iot-devices/iot-device-edit/mqtt-device-edit/mqtt-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/mqtt-device-edit/mqtt-device-edit.component.html
@@ -162,4 +162,5 @@
       </div>
     </ng-template>
   </ng-container>
+  <div class="row mt-2" *ngIf="iotDevice.mqttSubscriberSettings.authenticationType || iotDevice.mqttBrokerSettings.authenticationType"><p>{{ 'QUESTION.MQTT.CONFIG-HELP' | translate }}</p></div>
 </form>
