Added info-text to a hover on MQTT subtype

--- a/src/app/applications/iot-devices/iot-device-edit/mqtt-device-edit/mqtt-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/mqtt-device-edit/mqtt-device-edit.component.html
@@ -4,6 +4,14 @@
   </div>
   <div class="form-group mt-3 col-12">
     <label class="form-label" for="subType">{{'QUESTION.MQTT.SUBTYPE' | translate}}*</label>
+    <fa-icon
+      [icon]="faQuestionCircle"
+      class="form-info-icon"
+      [matTooltip]="'QUESTION.MQTT.SUBTYPE-HOVER' | translate"
+      matTooltipPosition="above"
+      matTooltipShowDelay="600"
+      matTooltipHideDelay="2000">
+    </fa-icon>
     <select
       id="subType"
       class="form-select"
