--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -16,8 +16,8 @@
          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('type'), 'is-valid' : formFailedSubmit && !errorFields.includes('type')}">
       <div class="form-check-inline radio-image">
         <label class="form-check-label d-flex flex-column-reverse">
-          <input attr.aria-label="LoRaWAN" type="radio" name="type" value="LORAWAN" class="form-check-input" required
-                 [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
+          <input attr.aria-label="LoRaWAN" type="checkbox" name="LORAWAN" class="form-check-input" required
+                [attr.disabled]="editmode ? '' : null" (change)="isChecked($event)" [checked]="iotDevice.type.toString().includes('LORAWAN')">
           <div class="image-container">
             <img src="assets/images/lora.png" alt="LoRaWAN">
           </div>
@@ -25,8 +25,8 @@
       </div>
       <div class="form-check-inline radio-image">
         <label class="form-check-label d-flex flex-column-reverse">
-          <input attr.aria-label="{{'GEN.HTTP' | translate}}" type="radio" name="type" value="GENERIC_HTTP"
-                 class="form-check-input" required [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
+          <input attr.aria-label="{{'GEN.HTTP' | translate}}" type="checkbox" name="GENERIC_HTTP"
+                 class="form-check-input" required [attr.disabled]="editmode ? '' : null" (change)="isChecked($event)" [checked]="iotDevice.type.toString().includes('GENERIC_HTTP')">
           <div class="image-container">
             <app-dynamic-img [altText]="'GEN.HTTP' | translate" [image]="'iot'"></app-dynamic-img>
           </div>
@@ -34,8 +34,8 @@
       </div>
       <div class="form-check-inline radio-image">
         <label class="form-check-label d-flex flex-column-reverse">
-          <input attr.aria-label="MQTT" type="radio"  value="MQTT" name="type" required
-                 class="form-check-input" [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null" >
+          <input attr.aria-label="MQTT" type="checkbox" name="MQTT" required
+                 class="form-check-input" [attr.disabled]="editmode ? '' : null" (change)="isChecked($event)" [checked]="iotDevice.type.toString().includes('MQTT')">
           <div class="image-container">
             <img src="assets/images/logo_mqtt.png" alt="MQTT">
           </div>
@@ -43,8 +43,8 @@
       </div>
       <div class="form-check-inline radio-image">
         <label class="form-check-label d-flex flex-column-reverse">
-          <input attr.aria-label="Sigfox" type="radio" name="type" value="SIGFOX" class="form-check-input" required
-                 [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
+          <input attr.aria-label="Sigfox" type="checkbox" name="SIGFOX" class="form-check-input" required
+                 [attr.disabled]="editmode ? '' : null" (change)="isChecked($event)" [checked]="iotDevice.type.toString().includes('SIGFOX')">
           <div class="image-container">
             <img src="assets/images/Sigfox_Logo.png" alt="Sigfox">
           </div>
