--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -13,7 +13,7 @@
         <form class="p-5 jumbotron" #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
             <div class="form-group col-8">
                 <label for="email">{{'AUTH.EMAIL' | translate}}</label>
-                <input type="username" id="username" class="form-control" ngModel name="username" required email
+                <input type="username" id="username" class="form-control" ngModel name="username" required email autofocus
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('username'), 'is-valid' : formFailedSubmit && !errorFields.includes('username')}">
             </div>
             <div class="form-group col-8">
