(IOT-1495) Added new time format pipe with seconds

--- a/src/app/applications/iot-devices/iot-device-detail/data-package/data-package.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/data-package/data-package.component.html
@@ -4,7 +4,7 @@
             <p>
                 <strong>{{'IOTDEVICE.LATEST-DATAPACKAGE' | translate}}</strong>
 
-                {{latestReceivedMessage.sentTime | tableDatePipe}}
+                {{latestReceivedMessage.sentTime | tableDateWithSecondsPipe}}
             </p>
         </mat-panel-title>
     </mat-expansion-panel-header>
