--- a/src/app/applications/iot-devices/iot-device-detail/data-packages-timestamp/data-packages-timestamp.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/data-packages-timestamp/data-packages-timestamp.component.html
@@ -20,7 +20,7 @@
           let metadata of sortedMetadata;
           let i = index
         ">
-        {{ metadata.sentTime | tableDatePipe }}
+        {{ metadata.sentTime | tableDateWithSecondsPipe }}
       </p>
     </div>
   </div>
