--- a/src/app/applications/datatarget/mqtt-edit/mqtt-edit.component.html
+++ b/src/app/applications/datatarget/mqtt-edit/mqtt-edit.component.html
@@ -14,9 +14,9 @@
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="name">{{'QUESTION.GIVE-DATATARGET-NAME' | translate}}</label>*
       <input type="text" class="form-control" id="name" name="name"
-        [placeholder]="'QUESTION.GIVE-DATATARGET-NAME-PLACEHOLDER' | translate" maxlength="50" required
-        [(ngModel)]="datatarget.name"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
+             [placeholder]="'QUESTION.GIVE-DATATARGET-NAME-PLACEHOLDER' | translate" maxlength="50" required
+             [(ngModel)]="datatarget.name"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
     </div>
   </div>
 
@@ -24,9 +24,9 @@
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="url">{{'QUESTION.DATATARGET.MQTT.GIVE-URL' | translate}}</label>*
       <input type="text" class="form-control" id="url" name="url"
-        [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-URL-PLACEHOLDER' | translate" required
-        [(ngModel)]="datatarget.url"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('url'), 'is-valid' : formFailedSubmit && !errorFields.includes('url')}">
+             [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-URL-PLACEHOLDER' | translate" required
+             [(ngModel)]="datatarget.url"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('url'), 'is-valid' : formFailedSubmit && !errorFields.includes('url')}">
     </div>
   </div>
 
@@ -34,9 +34,10 @@
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="mqtt-port">{{'QUESTION.DATATARGET.MQTT.GIVE-PORT' | translate}}</label>*
       <input type="number" class="form-control" id="mqtt-port" name="mqtt-port" [required]="true"
-        [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-PORT-PLACEHOLDER' | translate" [(ngModel)]="datatarget.mqttPort"
-        step="1" min="1025" max="65535"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttPort'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttPort')}">
+             [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-PORT-PLACEHOLDER' | translate"
+             [(ngModel)]="datatarget.mqttPort"
+             step="1" min="1025" max="65535"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttPort'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttPort')}">
     </div>
   </div>
 
@@ -44,22 +45,31 @@
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="mqtt-qos">{{'QUESTION.DATATARGET.MQTT.GIVE-QOS' | translate}}</label>*
       <fa-icon [icon]="faQuestionCircle" class="form-info-icon"
-        [matTooltip]="'QUESTION.DATATARGET.MQTT.GIVE-QOS-INFO' | translate" matTooltipPosition="above"
-        matTooltipShowDelay="600" matTooltipHideDelay="2000"></fa-icon>
+               [matTooltip]="'QUESTION.DATATARGET.MQTT.GIVE-QOS-INFO' | translate" matTooltipPosition="above"
+               matTooltipShowDelay="600" matTooltipHideDelay="2000"></fa-icon>
       <input type="number" class="form-control" id="mqtt-qos" name="mqtt-qos" [required]="true"
-        [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-QOS-PLACEHOLDER' | translate" [(ngModel)]="datatarget.mqttQos"
-        step="1" min="0" max="2"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttQos'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttQos')}">
+             [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-QOS-PLACEHOLDER' | translate"
+             [(ngModel)]="datatarget.mqttQos"
+             step="1" min="0" max="2"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttQos'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttQos')}">
     </div>
   </div>
 
   <div class="row mb-2">
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="mqtt-topic">{{'QUESTION.DATATARGET.MQTT.GIVE-TOPIC' | translate}}</label>*
+      <fa-icon
+        [icon]="faQuestionCircle"
+        class="form-info-icon"
+        [matTooltip]="'QUESTION.DATATARGET.MQTT.GIVE-TOPIC-INFO' | translate"
+        matTooltipPosition="above"
+        matTooltipShowDelay="600"
+        matTooltipHideDelay="2000"
+      ></fa-icon>
       <input type="text" class="form-control" id="mqtt-topic" name="mqtt-topic"
-        [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-TOPIC-PLACEHOLDER' | translate" required
-        [(ngModel)]="datatarget.mqttTopic"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttTopic'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttTopic')}">
+             [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-TOPIC-PLACEHOLDER' | translate" required
+             [(ngModel)]="datatarget.mqttTopic"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttTopic'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttTopic')}">
     </div>
   </div>
 
@@ -67,8 +77,8 @@
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="mqttUsername">{{'QUESTION.DATATARGET.MQTT.GIVE-USERNAME' | translate}}</label>*
       <input type="text" class="form-control" id="mqttUsername" name="mqttUsername" [required]="true"
-        [(ngModel)]="datatarget.mqttUsername"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttUsername'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttUsername')}">
+             [(ngModel)]="datatarget.mqttUsername"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttUsername'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttUsername')}">
     </div>
   </div>
 
@@ -76,8 +86,8 @@
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="mqttPassword">{{'QUESTION.DATATARGET.MQTT.GIVE-PASSWORD' | translate}}</label>*
       <input type="password" class="form-control" id="mqttPassword" name="mqttPassword" [required]="true"
-        [(ngModel)]="datatarget.mqttPassword"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttPassword'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttPassword')}">
+             [(ngModel)]="datatarget.mqttPassword"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttPassword'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttPassword')}">
     </div>
   </div>
 
@@ -85,8 +95,8 @@
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="timeout">{{'QUESTION.GIVE-DATATARGET-TIMEOUT' | translate}}</label>*
       <input type="number" class="form-control" id="timeout" name="timeout" required [(ngModel)]="datatarget.timeout"
-        step="1" min="0" max="100000" maxlength="7"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('timeout'), 'is-valid' : formFailedSubmit && !errorFields.includes('timeout')}">
+             step="1" min="0" max="100000" maxlength="7"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('timeout'), 'is-valid' : formFailedSubmit && !errorFields.includes('timeout')}">
     </div>
   </div>
 
@@ -99,49 +109,49 @@
     <ng-container *ngIf="devices && payloadDecoders && payloadDeviceDatatarget?.length > 0">
       <table class="table table-striped table-bordered">
         <tbody>
-          <tr *ngFor="let element of payloadDeviceDatatarget; let i = index;" [attr.data-index]="i">
-            <td>
-              <div class="row">
-                <mat-form-field appearance="fill">
-                  <mat-label>{{'QUESTION.DATATARGET.SELECT-DEVICES' | translate}}</mat-label>
-                  <mat-select multiple name="devices" [(value)]="element.iotDeviceIds">
-                    <mat-option disabled="disabled" class="filter-option">
-                      <button mat-raised-button class="mat-primary fill text-sm" (click)="selectAllDevices(i)">
-                        {{'QUESTION.DATATARGET.SELECTALLDEVICES' | translate}}
-                      </button>
-                      <button mat-raised-button class="mat-primary fill text-sm" (click)="deselectAllDevices(i)">
-                        {{'QUESTION.DATATARGET.DESELECTALLDEVICES' | translate}}
-                      </button>
-                    </mat-option>
-                    <mat-option *ngFor="let device of devices" [value]="device.id">{{device.name}}</mat-option>
-                  </mat-select>
-                </mat-form-field>
+        <tr *ngFor="let element of payloadDeviceDatatarget; let i = index;" [attr.data-index]="i">
+          <td>
+            <div class="row">
+              <mat-form-field appearance="fill">
+                <mat-label>{{'QUESTION.DATATARGET.SELECT-DEVICES' | translate}}</mat-label>
+                <mat-select multiple name="devices" [(value)]="element.iotDeviceIds">
+                  <mat-option disabled="disabled" class="filter-option">
+                    <button mat-raised-button class="mat-primary fill text-sm" (click)="selectAllDevices(i)">
+                      {{'QUESTION.DATATARGET.SELECTALLDEVICES' | translate}}
+                    </button>
+                    <button mat-raised-button class="mat-primary fill text-sm" (click)="deselectAllDevices(i)">
+                      {{'QUESTION.DATATARGET.DESELECTALLDEVICES' | translate}}
+                    </button>
+                  </mat-option>
+                  <mat-option *ngFor="let device of devices" [value]="device.id">{{device.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </td>
+          <td>
+            <div class="row">
+              <mat-form-field appearance="fill">
+                <mat-label>{{'QUESTION.DATATARGET.SELECT-PAYLOADDECODER' | translate}}</mat-label>
+                <mat-select matNativeControl name="payloadDecoderId" [(value)]="element.payloadDecoderId">
+                  <mat-option [value]="0">
+                    {{'QUESTION.DATATARGET.NO-PAYLOAD-DECODER-SELECTED' | translate}}
+                  </mat-option>
+                  <mat-option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
+                    {{payloadDecoder.name}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </td>
+          <td>
+            <a (click)="openDeleteDialog(i)">
+              <div class="text-center m-2">
+                <fa-icon [icon]="faTimesCircle"></fa-icon>
+                <p>{{'DATATARGET.DELETE' | translate}}</p>
               </div>
-            </td>
-            <td>
-              <div class="row">
-                <mat-form-field appearance="fill">
-                  <mat-label>{{'QUESTION.DATATARGET.SELECT-PAYLOADDECODER' | translate}}</mat-label>
-                  <mat-select matNativeControl name="payloadDecoderId" [(value)]="element.payloadDecoderId">
-                    <mat-option [value]="0">
-                      {{'QUESTION.DATATARGET.NO-PAYLOAD-DECODER-SELECTED' | translate}}
-                    </mat-option>
-                    <mat-option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
-                      {{payloadDecoder.name}}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-            </td>
-            <td>
-              <a (click)="openDeleteDialog(i)">
-                <div class="text-center m-2">
-                  <fa-icon [icon]="faTimesCircle"></fa-icon>
-                  <p>{{'DATATARGET.DELETE' | translate}}</p>
-                </div>
-              </a>
-            </td>
-          </tr>
+            </a>
+          </td>
+        </tr>
         </tbody>
       </table>
     </ng-container>
