--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -80,7 +80,7 @@
 
     <div class="form-group mt-3 col-6">
       <label class="form-label" for="longitude">{{'IOTDEVICE.LONGITUDE' | translate}}</label>
-      <input type="number" class="form-control" id="longitude" name="longitude" [placeholder]="00" required
+      <input type="number" class="form-control" id="longitude" name="longitude" [placeholder]="'00'" required
              [(ngModel)]="iotDevice.longitude" step=".000001" min="-180" max="180" maxlength="9"
              (keyup)="onCoordinateKey($event)"
              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('longitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('longitude')}">
@@ -88,7 +88,7 @@
 
     <div class="form-group mt-3 col-6">
       <label class="form-label" for="latitude">{{'IOTDEVICE.LATITUDE' | translate}}</label>
-      <input type="number" class="form-control" id="latitude" name="latitude" [placeholder]="00" required
+      <input type="number" class="form-control" id="latitude" name="latitude" [placeholder]="'00'" required
              [(ngModel)]="iotDevice.latitude" step=".000001" min="-90" max="90" maxlength="9"
              (keyup)="onCoordinateKey($event)"
              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('latitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('latitude')}">
@@ -123,7 +123,7 @@
 
     <div class="form-group mt-5">
       <label class="form-label" for="devEUI">{{'QUESTION.DEVEUI' | translate}}*</label>
-      <input type="text" id="devEUI" name="devEUI" maxLength="16"
+      <input type="text" id="devEUI" name="devEUI"
              [placeholder]="'QUESTION.DEVEUI-PLACEHOLDER' | translate" class="form-control"
              [(ngModel)]="iotDevice.lorawanSettings.devEUI" [disabled]="editmode"
              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('devEUI'), 'is-valid' : formFailedSubmit && !errorFields.includes('devEUI')}">
